--- a/config.toml
+++ b/config.toml
@@ -28,14 +28,37 @@ min_version = "0.87.0"
 name = "Jimmy Cai"
 homepage = "https://jimmycai.com"
 
-[Params]
+[params]
 favicon = "/favicon.ico"
 
-[Params.Sidebar]
+[params.sidebar]
 compact = false
 subtitle = "Write My Learn"
 avatar.src = "avatar.jpg"
 
-[Params.Article]
+[params.article]
 math = true
 toc = true
+
+[params.widgets]
+
+homepage = [
+    {type = "search"},
+    {type = "archives", params.limit = 5},
+    {type = "categories", params.limit = 10},
+    {type = "tag-cloud", params.limit = 10},
+
+]
+
+page = [
+    {type="toc"}
+]
+
+[menu]
+[[menu.main]]
+    name = "Home"
+    url = "/"
+    weight = -100
+    identifier = "home"
+    [menu.main.params]
+        icon = "home"
