整理报表笔记

--- a/config.toml
+++ b/config.toml
@@ -36,6 +36,7 @@ homepage = "https://jimmycai.com"
 
 [params]
 favicon = "/favicon.ico"
+customcss = ['css/custom.css']
 
 [params.sidebar]
 compact = false
