修改头像，删除旧文件

--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ customCSS = ["css/custom.css"]
 [params.sidebar]
 compact = false
 subtitle = "Write My Learn"
-avatar.src = "avatar.jpg"
+avatar.src = "avatar.webp"
 
 [params.footer]
 customText = "<a href='https://beian.miit.gov.cn' target='blank'>赣ICP备20010259号-1</a>"
